# birthday-paradox

./: .gitignore  README.md  pyproject.toml  requirements.txt
.code-generator/: phase6_5_spec.json  requirements.md  state.json
.code-generator/cycles_prompts/9902ff37e646172e23fb10d53772f20830dbeabd77dd2ef7331dd38325176731/: cycle_1.md  cycle_2.md  cycle_3.md  cycle_4.md
.code-generator/memories/: cycle-repo-map.md  cycle-summary.md  project-plan.md
.github/workflows/: ci.yml  release.yml
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
output/: .gitkeep
src/birthday/: cli.py
src/birthday/core/: config.py  models.py
src/birthday/di/: container.py
src/birthday/math/: probability.py
src/birthday/reporting/: console.py
src/birthday/simulation/: monte_carlo.py
src/birthday/visualization/: matplotlib_viz.py  writers.py
tests/: test_animate_cli.py  test_ci_workflow.py  test_cli.py  test_di.py  test_gitignore.py  test_plots.py  test_probability.py  test_readme_v11.py  test_reporting.py  test_simulation.py  test_visualization.py  test_visualizer.py  test_writers.py
