[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birthday-paradox"
version = "1.0.0"
description = "A probabilistic study of the Birthday Paradox using exact, asymptotic, and Monte Carlo methods, with animated visualizations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Silvio Baratto", email = "silvio.baratto222@gmail.com"}
]
keywords = [
    "birthday-paradox",
    "probability",
    "monte-carlo",
    "combinatorics",
    "statistics",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
birthday = "birthday.cli:main"

[project.urls]
Homepage = "https://github.com/SilvioBaratto/birthday-paradox"
Repository = "https://github.com/SilvioBaratto/birthday-paradox"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.coverage.run]
source = ["src/birthday"]
branch = true
